<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GuideForgotLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/permission_denied" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="2" >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:text="@string/send_button" />
    </LinearLayout>

</LinearLayout>